--- a/zforce.in
+++ b/zforce.in
@@ -41,22 +41,19 @@ for i do
     res=1
     continue
   fi
-  test `expr "$i" : '.*[.-]z$'` -eq 0 || continue
-  test `expr "$i" : '.*[.-]gz$'` -eq 0 || continue
-  test `expr "$i" : '.*[.]t[ag]z$'` -eq 0 || continue
+
+  case "$i" in
+  *[-.]z | *[-.]gz | *.t[ag]z) continue;;
+  esac
 
   if gzip -lv < "$i" 2>/dev/null | grep '^defl' > /dev/null; then
 
-    if test `expr "$i" : '^............'` -eq 12; then
-      new=`expr "$i" : '\(.*\)...$`.gz
-    else
-      new="$i.gz"
-    fi
-    if mv "$i" "$new" 2>/dev/null; then
+    new="$i.gz"
+    if mv "$i" "$new"; then
       echo $i -- replaced with $new
-      continue
+    else
+      res=$?
     fi
-    res=1; echo ${x}: cannot rename $i to $new
   fi
 done
 exit $res
