* NEWS, configure.ac (AC_INIT): Version 1.3.6 released.
* NEWS: Describe 1.3.6's changes.
* NEWS, README, README-alpha, TODO: Change from GPL to FDL.
* .cvsignore, README-cvs, bootstrap, bootstrap.conf: New files.
* doc/Makefile.am, lib/Makefile.am: New files.
* THANKS: Change own email address to cs.ucla.edu.  Add Sverre Jarp.
* TODO: Add new tasks to remove porting cruft and
all those buggy scripts.

* configure.ac: Renamed from configure.in.
(AC_PREREQ): Bump to 2.60.
(AC_INIT): Bump version to 1.3.6.
(AC_CONFIG_AUX_DIR): New.
(AC_CONFIG_HEADERS): Move config.h to lib.
Input is now lib/config.hin.
(AM_INIT_AUTOMAKE): Add gnits, dist-shar.
(AC_PROG_CC_STDC): New, replacing AC_PROG_CC.
(AM_PROG_CC_C_O, AC_PROG_RANLIB): New.
(AC_AIX, AC_GNU_SOURCE, AC_MINIX): Remove; gnulib does them now.
(gl_EARLY, gl_INIT): New.
match.c was moved to lib/match.c.
(AC_CHECK_HEADERS_ONCE): Replace AC_CHECK_HEADERS.  Don't check
for sys/utime.h or utime.h.
(AC_CHECK_FUNCS_ONCE): Replace AC_CHECK_FUNCS.  Check for fchmod
and fchown, not utime.
(AC_REPLACE_FUNCS): Remove; rpmatch is now done by gnulib.
(AC_CONFIG_FILES): Add doc/Makefile, lib/Makefile.

* bits.c: Use the more-usual form for copyright notices in source code.
* deflate.c: Likewise.
* gzip.c: Likewise.
* gzip.h: Likewise.
* inflate.c: Likewise.
* lzw.h: Likewise.
* revision.h: Likewise.
* tailor.h: Likewise.
* trees.c: Likewise.
* unpack.c: Likewise.
* unzip.c: Likewise.
* util.c: Likewise.
* crypt.c (dummy): Add decl so that pedantic compilers won't
complain about an empty file.
* gzip.c (license_msg): Use more-modern wording.
Include fcntl-safer.h, openat.h, stat-macros.h, stat-time.h.
Simply include <dirent.h> if !NO_DIR, removing a rats-nest of
#ifdefs.
Simply include <utimens.h> if !defined NO_UTIME, removing a
another rats-nest of #ifdefs.
(DIR_OPT, TIME_OPT): Remove.
(_D_EXACT_NAMLEN): Renamed from NAMLEN.  All uses changed.
(S_ISDIR, S_ISREG, O_BINARY, O_CREAT, O_EXCL, S_IRUSR, S_IWUSR):
Remove; gnulib now does thi

--- a/gzexe.in
+++ b/gzexe.in
@@ -19,39 +19,56 @@
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 2, or (at your option)
-# any later version.
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
 
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
-# 02111-1307, USA.
+# You should have received a copy of the GNU General Public License along
+# with this program; if not, write to the Free Software Foundation, Inc.,
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+
+version='gzexe (gzip) @VERSION@
+Copyright (C) 2006 Free Software Foundation, Inc.
+This is free software.  You may redistribute copies of it under the terms of
+the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
+There is NO WARRANTY, to the extent permitted by law.
+
+Written by Jean-loup Gailly.'
+
+usage='Usage: gzexe [OPTION] FILE...
+Rename each FILE with a compressed version of itself, renaming FILE to FILE~.
+
+  -d             Decompress each FILE instead of compressing it.
+      --help     display this help and exit
+      --version  output version information and exit
+
+Report bugs to <bug-gzip@gnu.org>.'
 
 
 PATH="BINDIR:$PATH"
-x=`basename $0`
 if test $# = 0; then
-  echo compress executables. original file foo is renamed to foo~
-  echo usage: ${x} [-d] files...
-  echo   "   -d  decompress the executables"
+  echo "$usage"
   exit 1
 fi
 
-tmp=gz$$
-trap "rm -f $tmp; exit 1" 1 2 3 5 10 13 15
-
 decomp=0
 res=0
-test "$x" = "ungzexe" && decomp=1
-if test "x$1" = "x-d"; then
-  decomp=1
-  shift
-fi
+while :; do
+  case $1 in
+  -d) decomp=1; shift;;
+  --h*) exec echo "$usage";;
+  --v*) exec echo "$version";;
+  --) shift; break;;
+  *) break;;
+  esac
+done
+
+tmp=gz$$
+trap "rm -f $tmp; exit 1" 1 2 3 5 10 13 15
 
 set -C
 echo hi > $tmp || exit
@@ -97,8 +114,8 @@ for i do
     echo "${x}: $i has setgid permission, unchanged"
     continue
   fi
-  case "`basename $i`" in
-  gzip | tail | sed | chmod | ln | sleep | rm)
+  case "$i" in
+  */gzip | */tail | */sed | */chmod | */ln | */sleep | */rm)
 	echo "${x}: $i would depend on itself"; continue ;;
   esac
   if test -z "$cpmod"; then
