(check-local): Quote $file a bit better.

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,7 +63,7 @@ FILES_TO_CHECK = $(bin_SCRIPTS) $(gzip_LDADD) \
   $(top_srcdir)/ChangeLog $(top_srcdir)/configure $(top_srcdir)/gzip.c
 check-local: $(FILES_TO_CHECK)
 	for file in $(FILES_TO_CHECK); do \
-	  ./gzip -cv $$file | ./gzip -d | cmp - "$$file" || exit; \
+	  ./gzip -cv -- "$$file" | ./gzip -d | cmp - "$$file" || exit; \
 	done
 	@echo 'Test succeeded.'
 
