Fix build failure on case-insensitive file systems. * configure.ac: Use match_.s instead of _match.s. * Makefile.am (MOSTLYCLEANFILES): Likewise. * lib/Makefile.am (match.$(OBJEXT)): Likewise. (MOSTLYCLEANFILES): Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -98,4 +98,4 @@ uninstall-local: remove-installed-links
 
 MAINTAINERCLEANFILES = gzip.doc
 
-MOSTLYCLEANFILES = _match.s _match.S gzexe zdiff zforce zgrep zless zmore znew
+MOSTLYCLEANFILES = match_.s _match.S gzexe zdiff zforce zgrep zless zmore znew
