--- a/lib/.cvsignore
+++ b/lib/.cvsignore
@@ -1,3 +1,59 @@
 Makefile.in
+alloca.c
+alloca_.h
 config.hin
+creat-safer.c
+dup-safer.c
+error.c
+error.h
+exit.h
+exitfail.c
+exitfail.h
+fcntl--.h
+fcntl-safer.h
+fcntl_.h
+fd-safer.c
+getdelim.c
+getdelim.h
+getline.c
+getline.h
+getopt.c
+getopt1.c
+getopt_.h
+getopt_int.h
+gettext.h
 gnulib.mk
+malloc.c
+mbchar.c
+mbchar.h
+mbuiter.h
+memchr.c
+open-safer.c
+pipe-safer.c
+regcomp.c
+regex.c
+regex.h
+regex_internal.c
+regex_internal.h
+regexec.c
+rpmatch.c
+stat-time.h
+stat_.h
+stdbool_.h
+stdint_.h
+strcase.h
+strcasecmp.c
+strncasecmp.c
+strnlen1.c
+strnlen1.h
+timespec.h
+unistd--.h
+unistd-safer.h
+utimens.c
+utimens.h
+wcwidth.h
+xalloc-die.c
+xalloc.h
+xmalloc.c
+yesno.c
+yesno.h
