* configure.ac (for assembler): Set ASFLAGS_config to -Wa,--noexecstack if this seems advisable on this platform. Problem reported by Mike Frysinger in <http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00018.html>. * lib/Makefile.am (match.$(OBJEXT)): Use ASFLAGS_config.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -28,7 +28,7 @@ LN_S = @LN_S@
 match.$(OBJEXT): match.c
 	cp $(srcdir)/match.c _match.S
 	$(ASCPP) _match.S > match_.s
-	$(CC) -c $(CFLAGS) match_.s
+	$(CC) -c $(CFLAGS) $(ASFLAGS_config) match_.s
 	mv match_.$(OBJEXT) $@
 	rm -f _match.S match_.s
 
