* configure.ac: Use $CPPFLAGS everywhere $CPP is used, and use $CPPFLAGS $CFLAGS everywhere $CC is used. * lib/Makefile.am (match.$(OBJEXT)): Likewise. * configure.ac: Test the exit code of the $CPP and $ASCPPPOST commands separately.

--- a/configure.ac
+++ b/configure.ac
@@ -55,7 +55,7 @@ AC_SUBST([ASCPPFLAGS])
 AC_OBJEXT
 
 # Try to assemble match.S.
-# "gcc -E match.s" ignores -E, so we must use match_.s.
+# "gcc -E match.s" ignores -E, so we must use _match.S.
 AC_CACHE_CHECK([for an assembler syntax supported by this package],
   [gzip_cv_assembler],
   [gzip_cv_assembler=no
@@ -63,17 +63,18 @@ AC_CACHE_CHECK([for an assembler syntax supported by this package],
    *' NO_ASM '*) ;;
    *)
      if cp $srcdir/lib/match.c _match.S &&
-	eval "$CPP $ASCPPFLAGS _match.S | $ASCPPPOST > match_.s 2>/dev/null"; then
+	eval "$CPP $CPPFLAGS $ASCPPFLAGS _match.S > _match.i" 2>/dev/null &&
+	eval "$ASCPPPOST < _match.i > match_.s" 2>/dev/null; then
        if test ! -s match_.s || grep error < match_.s > /dev/null; then
 	 :
-       elif eval "$CC -c match_.s >/dev/null 2>&1" &&
+       elif eval "$CC $CPPFLAGS $CFLAGS -c match_.s >/dev/null 2>&1" &&
 	    test -f match_.$OBJEXT; then
 	 rm -f match_.$OBJEXT
 	 gzip_cv_assembler=yes
 	 if echo 'void foo (void) {}' > conftest.c &&
-	    eval "$CC -S conftest.c >/dev/null 2>&1" &&
+	    eval "$CC $CPPFLAGS $CFLAGS -S conftest.c >/dev/null 2>&1" &&
 	    grep '\.note\.GNU-stack' conftest.s >/dev/null 2>&1 &&
-	    eval "$CC -c -Wa,--noexecstack match_.s >/dev/null 2>&1" &&
+	    eval "$CC $CPPFLAGS $CFLAGS -c -Wa,--noexecstack match_.s >/dev/null 2>&1" &&
 	    test -f match_.$OBJEXT; then
 	   gzip_cv_assembler='yes, with -Wa,--noexecstack'
 	 fi
