--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -24,9 +24,9 @@ libgzip_a_DEPENDENCIES += $(LIBOBJS)
 
 match.$(OBJEXT): match.c
 	cp $(srcdir)/match.c _match.S
-	$(CPP) $(ASCPPFLAGS) _match.S > _match.i
+	$(CPP) $(CPPFLAGS) $(ASCPPFLAGS) _match.S > _match.i
 	@ASCPPPOST@ < _match.i > match_.s
-	$(CC) -c $(CFLAGS) $(ASFLAGS_config) match_.s
+	$(CC) $(CPPFLAGS) $(CFLAGS) $(ASFLAGS_config) -c match_.s
 	mv match_.$(OBJEXT) $@
 	rm -f _match.S _match.i match_.s
 
