* NEWS, configure.ac (AC_INIT): Version 1.3.9 released.
* bootstrap (gnulib_tool_options_extras): New var.
(gnulib_tool_options): Use it.
* bootstrap.conf (gnulib_tool_options_extras): Avoid getline and
rpmatch.  gzip doesn't need them, since it doesn't ENABLE_NLS.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -34,5 +34,12 @@ gnulib_modules='
 	yesno
 '
 
+# Additional gnulib-tool options to use.  Use "\newline" to break lines.
+# We don't need the getline and rpmatch, since yesno doesn't do i18n.
+gnulib_tool_option_extras="\
+ --avoid getline\
+ --avoid rpmatch\
+"
+
 # Create build-aux, since 'bootstrap' won't do that for us.
 mkdir -p build-aux
