* zgrep.in (version): Fix bug: $grep wasn't evaluated.
* zgrep.in: Rewrite to make the option processing more
compatible with GNU and POSIX grep.  Assume POSIX shell
for more stuff, since we're already assuming that.
* Makefile.am (check-local): Check zgrep -iV.

--- a/Makefile.am
+++ b/Makefile.am
@@ -69,6 +69,7 @@ check-local: $(FILES_TO_CHECK) gzip.doc.gz
 	./zdiff gzip.doc gzip.doc.gz
 	./zdiff -c - gzip.doc <gzip.doc.gz
 	./zdiff -c gzip.doc.gz gzip.doc.gz
+	./zgrep -iV >/dev/null
 	for file in $(FILES_TO_CHECK); do \
 	  ./gzip -cv -- "$$file" | ./gzip -d | cmp - "$$file" || exit; \
 	done
