* .cvsignore: Add *.gz, gunzip, zcat, zcmp, zegrep, zfgrep. * lib/.cvsignore: Add sys_time_.h, unistd_.h. * m4/.cvsignore: Add gnulib-common.m4, sys_time_h.m4.

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,5 +1,6 @@
 *.cache
 *.doc
+*.gz
 *.lineno
 *.log
 .deps
@@ -10,10 +11,15 @@ aclocal.m4
 build-aux
 config.status
 configure
+gunzip
 gzexe
 gzip
 gzip-*
+zcat
+zcmp
 zdiff
+zegrep
+zfgrep
 zforce
 zgrep
 zless
