--- a/lib/.cvsignore
+++ b/lib/.cvsignore
@@ -54,9 +54,11 @@ strncasecmp.c
 strnlen1.c
 strnlen1.h
 sys
+sys_time_.h
 timespec.h
 unistd--.h
 unistd-safer.h
+unistd_.h
 utimens.c
 utimens.h
 wcwidth.h
