--- a/lib/.cvsignore
+++ b/lib/.cvsignore
@@ -1,16 +1,12 @@
 .deps
 Makefile
 Makefile.in
-alloca.c
-alloca.h
-alloca_.h
 config.h
 config.hin
 creat-safer.c
 dup-safer.c
 error.c
 error.h
-exit.h
 exitfail.c
 exitfail.h
 fcntl--.h
@@ -18,50 +14,30 @@ fcntl-safer.h
 fcntl.h
 fcntl_.h
 fd-safer.c
-getdelim.c
-getdelim.h
-getline.c
-getline.h
 getopt.c
 getopt1.c
 getopt_.h
 getopt_int.h
 gettext.h
 gnulib.mk
-malloc.c
-mbchar.c
-mbchar.h
-mbuiter.h
-memchr.c
 open-safer.c
 pipe-safer.c
-regcomp.c
-regex.c
-regex.h
-regex_internal.c
-regex_internal.h
-regexec.c
-rpmatch.c
 stamp-h1
 stat-time.h
 stat_.h
 stdbool_.h
-stdint.h
-stdint_.h
-strcase.h
-strcasecmp.c
-strncasecmp.c
-strnlen1.c
-strnlen1.h
+stdlib.h
+stdlib_.h
 sys
 sys_time_.h
-timespec.h
+time.h
+time_.h
 unistd--.h
 unistd-safer.h
+unistd.h
 unistd_.h
 utimens.c
 utimens.h
-wcwidth.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
