--- a/m4/.cvsignore
+++ b/m4/.cvsignore
@@ -1,42 +1,25 @@
 absolute-header.m4
-alloca.m4
-codeset.m4
 error.m4
 exitfail.m4
 extensions.m4
 fcntl-safer.m4
 fcntl_h.m4
-getdelim.m4
-getline.m4
 getopt.m4
 gnulib-cache.m4
 gnulib-common.m4
 gnulib-comp.m4
 gnulib-tool.m4
 inline.m4
-longlong.m4
-mbchar.m4
-mbiter.m4
-mbrtowc.m4
-memchr.m4
-regex.m4
-rpmatch.m4
-ssize_t.m4
 stat-time.m4
 stdbool.m4
-stdint.m4
-strcase.m4
+stdlib_h.m4
 sys_stat_h.m4
 sys_time_h.m4
-timespec.m4
-ulonglong.m4
+time_h.m4
 unistd-safer.m4
 unistd_h.m4
 utimbuf.m4
 utimens.m4
 utimes.m4
-wchar_t.m4
-wcwidth.m4
-wint_t.m4
 xalloc.m4
 yesno.m4
