* Makefile.am (.in): Substitute @bindir@, not BINDIR, for consistency with other substitutions. (check-local): Use --__bindir . rather than setting GZIP_BINDIR=., to allay security concerns voiced by Joerg Lehners in <http://lists.gnu.org/archive/html/bug-gzip/2007-04/msg00003.html>. * gunzip.in, gzexe.in, zcat.in, zcmp.in, zdiff.in, zegrep.in, zfgrep.in: * zforce.in, zgrep.in, zless.in, zmore.in, znew.in: Support --__bindir rather than GZIP_BINDIR.
* gunzip.in, zcat.in, zcmp.in: Support --help and --version
directly, to avoid some confusion in help and version output.
Problem reported by Eric Blake in
<http://lists.gnu.org/archive/html/bug-gzip/2007-04/msg00006.html>.

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,7 +56,7 @@ SUFFIXES = .in
 .in:
 	sed \
 		-e 's|/bin/sh|$(SHELL)|g' \
-		-e 's|BINDIR|$${GZIP_BINDIR-'\''$(bindir)'\''}|g' \
+		-e 's|[@]bindir@|'\''$(bindir)'\''|g' \
 		-e 's|[@]VERSION@|$(VERSION)|g' \
 		$(srcdir)/$@.in >$@
 	chmod a+x $@
@@ -65,12 +65,12 @@ SUFFIXES = .in
 FILES_TO_CHECK = $(bin_SCRIPTS) $(gzip_LDADD) \
   $(top_srcdir)/ChangeLog $(top_srcdir)/configure $(top_srcdir)/gzip.c
 check-local: $(FILES_TO_CHECK) gzip.doc.gz
-	{ test '$(srcdir)' != . || GZIP_BINDIR=. ./zdiff -c gzip.doc.gz; }
-	GZIP_BINDIR=. ./zdiff -c $(srcdir)/gzip.doc $(srcdir)/gzip.doc
-	GZIP_BINDIR=. ./zdiff $(srcdir)/gzip.doc gzip.doc.gz
-	GZIP_BINDIR=. ./zdiff -c - $(srcdir)/gzip.doc <gzip.doc.gz
-	GZIP_BINDIR=. ./zdiff -c gzip.doc.gz gzip.doc.gz
-	GZIP_BINDIR=. ./zgrep -iV >/dev/null
+	{ test '$(srcdir)' != . || ./zdiff --__bindir . -c gzip.doc.gz; }
+	./zdiff --__bindir . -c $(srcdir)/gzip.doc $(srcdir)/gzip.doc
+	./zdiff --__bindir . $(srcdir)/gzip.doc gzip.doc.gz
+	./zdiff --__bindir . -c - $(srcdir)/gzip.doc <gzip.doc.gz
+	./zdiff --__bindir . -c gzip.doc.gz gzip.doc.gz
+	./zgrep --__bindir . -iV >/dev/null
 	for file in $(FILES_TO_CHECK); do \
 	  ./gzip -cv -- "$$file" | ./gzip -d | cmp - "$$file" || exit; \
 	done
