--- a/zgrep.in
+++ b/zgrep.in
@@ -20,7 +20,12 @@
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-PATH=BINDIR:$PATH
+bindir=@bindir@
+case $1 in
+--__bindir) bindir=${2?}; shift; shift;;
+esac
+PATH=$bindir:$PATH
+
 grep='${GREP-grep}'
 
 version='zgrep (gzip) @VERSION@
