* lib/.cvsignore: Update to match current gnulib.
* m4/.cvsignore: Likewise.

--- a/lib/.cvsignore
+++ b/lib/.cvsignore
@@ -12,30 +12,34 @@ exitfail.h
 fcntl--.h
 fcntl-safer.h
 fcntl.h
-fcntl_.h
+fcntl.in.h
 fd-safer.c
 getopt.c
+getopt.in.h
 getopt1.c
-getopt_.h
 getopt_int.h
 gettext.h
 gnulib.mk
+intprops.h
 open-safer.c
 pipe-safer.c
 stamp-h1
 stat-time.h
-stat_.h
-stdbool_.h
+stdbool.in.h
 stdlib.h
-stdlib_.h
+stdlib.in.h
+strerror.c
+string.h
+string.in.h
 sys
-sys_time_.h
+sys_stat.in.h
+sys_time.in.h
 time.h
-time_.h
+time.in.h
 unistd--.h
 unistd-safer.h
 unistd.h
-unistd_.h
+unistd.in.h
 utimens.c
 utimens.h
 xalloc-die.c
